--- a/shoppy.html
+++ b/shoppy.html
@@ -46,7 +46,7 @@
         }
         button {
             background-color: #007bff;
-            color: white;
+            color: blue;
             border: none;
             padding: 10px 15px;
             cursor: pointer;
